--- a/hi.html
+++ b/hi.html
@@ -6,8 +6,17 @@
         <h1> Covid-19 status in Morocco </h1>
         <hr>
         <img src="https://www.mauicounty.gov/ImageRepository/Document?documentID=121314">
-
     </header>
+    <section>
+        <h2>Cases by province</h2>
+        <p>NOTE! the data updates every 4 hours</p>
+    </section>
+    <footer>
+        <h4>Powerd by V-M4K4R0V</h4>
+        <li><img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png"></li>
+        <li><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Facebook_icon_2013.svg"></li>
+        <li><img src=""></li>
+    </footer>
 
 </body>
 
