--- a/hi.html
+++ b/hi.html
@@ -9,13 +9,13 @@
     </header>
     <section>
         <h2>Cases by province</h2>
-        <p>NOTE! the data updates every 4 hours</p>
+        <p><strong>! the data updates every 4 hours</strong></p>
     </section>
     <footer>
         <h4>Powerd by V-M4K4R0V</h4>
-        <li><img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png"></li>
-        <li><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Facebook_icon_2013.svg"></li>
-        <li><img src=""></li>
+        <li><img src="img/FB.png"></li>
+        <li><img src="img/GH.png"></li>
+        <li><img src="img/in.png"></li>
     </footer>
 
 </body>
