--- a/corona.html
+++ b/corona.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <script src="data.js"></script>
+</head>
+
 <body>
     <header>
         <h1> Covid-19 status in Morocco </h1>
+        <button id="gapi">getapi</button>
         <hr>
         <img src="https://www.mauicounty.gov/ImageRepository/Document?documentID=121314">
     </header>
